# rusty-syphon

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: list_servers.rs  roundtrip.rs
prebuilt/: README.md
prebuilt/windows/lib/cmake/spout2/: spout2-config-version.cmake  spout2-config.cmake  spout2-targets-release.cmake  spout2-targets.cmake
src/: ffi.rs  lib.rs  safe.rs
syphon_glue/: syphon_glue.h  syphon_glue.m
